# ItMG-Engine

./: CMakeLists.txt
.project/: CMakeLists.txt  chatBox.h  client.cpp  client.h  game.h  hitbox.cpp  hitbox.h  level.h  main.cpp  menu.cpp  menu.h  platform.h  player.cpp  player.h  server.cpp  server.h
.project/assets/levels/: 0.txt  1.txt
.project/assets/shaders/: sphere.frag  sphere.vert
.project/assets/textures/font/: font_editable.pdn
assignments/assignment1_helloTriangle/: CMakeLists.txt  assignment1.hpp  assignment2.hpp  main.cpp
assignments/assignment1_helloTriangle/assets/: shaderTest.glsl
assignments/assignment1_helloTriangle/assets/assignment1/: triangle.frag  triangle.vert
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/assignment2/: bg.frag  bg.vert  bread.frag  bread.vert
assignments/assignment4/: CMakeLists.txt  main.cpp
assignments/assignment4/assets/assignment2/: bread.frag
assignments/assignment4/assets/assignment4/: assignment4.frag  assignment4.vert
assignments/assignment5/: CMakeLists.txt  main.cpp
assignments/assignment5/assets/assignment2/: bg.frag  bg.vert
assignments/assignment5/assets/assignment4/: assignment4.vert
assignments/assignment5/assets/assignment5/: assignment5.frag  assignment5.vert
assignments/testing/: CMakeLists.txt  main.cpp
assignments/testing/assets/assignment4/: assignment4.frag  assignment4.vert
assignments/testing/assets/assignment5/: assignment5.frag
assignments/testing/assets/testing/: pointer.vert  sphere.frag  sphere.vert  testing.frag  testing.vert
assignments/testing/assets/testing/backpack/: backpack.mtl
core/: CMakeLists.txt
core/cobb/: shader.cpp  shader.h  shader.hpp  texture2d.cpp  texture2d.hpp  window.cpp  window.hpp
core/cobb/core/: camera.cpp  camera.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  window.cpp  window.h
core/cobb/misc/: animation.cpp  animation.h  fontRenderer.cpp  fontRenderer.h  textRenderer.cpp  textRenderer.h  texture2d.cpp  texture2d.h
core/cobb/misc/assets/: fontRenderer.frag  fontRenderer.vert  texture2d.frag
core/cobb/objects/1d/: fadeLine.cpp  fadeLine.hpp  line.hpp
core/cobb/objects/1d/assets/: fadeLine.frag  fadeLine.vert  line.frag  line.vert
core/cobb/objects/2d/: fadeTriangle.cpp  fadeTriangle.h  fadeTriangle.hpp  texture2d.cpp  texture2d.hpp  triangle.cpp  triangle.hpp
core/cobb/objects/2d/assets/: fadeTriangle.frag  fadeTriangle.vert  triangle.frag  triangle.vert
core/cobb/objects/3d/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  cubeMap.cpp  cubeMap.hpp  geometry.cpp  geometry.hpp  lightSource.cpp  lightSource.hpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp
core/cobb/objects/3d/assets/: lightSource.vert  model.frag  model.vert
core/cobb/shapes/: cube.cpp  cube.hpp  geometry.cpp  geometry.h  line.cpp  line.h  mesh.cpp  mesh.h  model.cpp  model.h  torus.cpp  torus.h
